purchase_list btn align (issue #164)

--- a/static/css/dashboard/purchase_list.css
+++ b/static/css/dashboard/purchase_list.css
@@ -394,26 +394,24 @@
     height:15%;
     display: inline-block;
     background-color: #e8e8e8;
-
+    text-align: center;
 }
 
 .table_product_detail_bottom ul{
     list-style: none;
-    width:100%;
-    height:100%;
     padding-top:8px;
+    display: inline-block;
 }
 
 .table_product_detail_bottom ul li{
     float:left;
-    width:13%;
-    margin-left:5%;
+    width:80px;
+    margin-left:15px;
     font-size:13px;
 }
 
 .table_product_detail_bottom ul li:nth-child(1) {
-    width:20%;
-    margin-left:22%;
+    width:100px;
 }
 
 .table_product_detail_bottom ul li button{
@@ -424,7 +422,7 @@
 
 .table_product_detail_bottom ul li .detail_bottom_btn-talk{
     background-color: #648efc;
-    width:100%;
+    width:100px;
     height:30px;
     color:white;
     border:1px solid #648efc;
@@ -448,7 +446,7 @@
 
 .table_product_detail_bottom ul li .detail_bottom_btn {
     background-color: white;
-    width:100%;
+    width:80px;
     height:30px;
     color:grey;
     border:1px solid grey;
